tests/fixtures/errors/reserved_member_borrow.z
# reserved_member_borrow.z -- a variant arm named `borrow` is rejected (E0037).

modes: variant {
    borrow: null
    ok: null
}

main: function is {
    print "unreachable"
}
